<resources>
    <string name="app_name">RPGTest</string>
    <string name="btnHomeClasses">Classes</string>
    <string name="btnHomeAdventurers">Adventurers</string>
    <string name="btnHomeQuests">Quests</string>
    <string name="formClassTxtName">Name</string>
    <string name="formClassTxtWeapon">Weapon</string>
    <string name="rdBtnDPS">DPS</string>
    <string name="rdBtnTANK">TANK</string>
    <string name="rdBtnHEALER">HEALER</string>
    <string name="errorInsert">Error at insert</string>
    <string name="successInsert">Success at insert</string>
    <string name="errorUpdate">Error at update</string>
    <string name="successUpdate">Success at update</string>
    <string name="errorDelete">Error at delete</string>
    <string name="successDelete">Success at delete</string>
    <string name="adapterClass_txt">Weapon:</string>
    <string name="context_update">Update</string>
    <string name="context_delete">Delete</string>
    <string name="formAdventurer_txtName">Name:</string>
    <string name="formAdventurer_txtRace">Race:</string>
    <string name="formAdventurer_txtAlignment">Alignment:</string>
    <string name="formAdventurer_txtClass">Class:</string>
    <string name="formAdventurer_txtStr">STR</string>
    <string name="formAdventurer_edtStr">0</string>
    <string name="formAdventurer_txtDex">DEX</string>
    <string name="formAdventurer_edtDex">0</string>
    <string name="formAdventurer_txtInt">INT</string>
    <string name="formAdventurer_edtInt">0</string>
    <string name="noClasses">No available classes</string>
    <string name="dialog_name_txt">Name</string>
    <string name="dialog_race_txt">Race</string>
    <string name="dialog_alignment_txt">Alignment</string>
    <string name="dialog_class_txt">Class</string>
    <string name="dialog_weapon_txt">Weapon</string>
    <string name="dialog_role_txt">Role</string>
    <string name="dialog_str_txt">STR</string>
    <string name="dialog_dex_txt">DEX</string>
    <string name="dialog_int_txt">INT</string>
    <string name="dialogPositiveButton">Close</string>
    <string name="ADVENTURER_RACE_HUMAN">Human</string>
    <string name="ADVENTURER_RACE_ORC">Orc</string>
    <string name="ADVENTURER_RACE_ELF">Elf</string>
    <string name="ADVENTURER_RACE_DWARF">Dwarf</string>
    <string name="ADVENTURER_RACE_DEMON">Demon</string>
    <string name="ADVENTURER_ALIGNMENT_GOOD_LAWFUL">Lawful good</string>
    <string name="ADVENTURER_ALIGNMENT_GOOD_NEUTRAL">Neutral good</string>
    <string name="ADVENTURER_ALIGNMENT_GOOD_CHAOTIC">Chaotic good</string>
    <string name="ADVENTURER_ALIGNMENT_NEUTRAL_LAWFUL">Lawful neutral</string>
    <string name="ADVENTURER_ALIGNMENT_NEUTRAL_NEUTRAL">True neutral</string>
    <string name="ADVENTURER_ALIGNMENT_NEUTRAL_CHAOTIC">Chaotic neutral</string>
    <string name="ADVENTURER_ALIGNMENT_EVIL_LAWFUL">Lawful evil</string>
    <string name="ADVENTURER_ALIGNMENT_EVIL_NEUTRAL">Neutral evil</string>
    <string name="ADVENTURER_ALIGNMENT_EVIL_CHAOTIC">Chaotic evil</string>
    <string name="CLASS_ROLE_DPS">DPS</string>
    <string name="CLASS_ROLE_TANK">TANK</string>
    <string name="CLASS_ROLE_HEALER">HEALER</string>
</resources>
