<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/formAdventurer_txtName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/formAdventurer_txtName"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/formAdventurer_edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/formAdventurer_txtName"
                android:layout_toEndOf="@+id/formAdventurer_txtName"
                android:inputType="text"
                android:labelFor="@+id/formAdventurer_edtName" />

            <TextView
                android:id="@+id/formAdventurer_txtRace"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formAdventurer_txtName"
                android:layout_marginBottom="20dp"
                android:text="@string/formAdventurer_txtRace"
                android:textColor="@color/colorBlack" />

            <Spinner
                android:id="@+id/formAdventurer_spinRace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/formAdventurer_txtRace"
                android:layout_toEndOf="@+id/formAdventurer_txtRace" />

            <TextView
                android:id="@+id/formAdventurer_txtAlignment"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formAdventurer_txtRace"
                android:layout_marginBottom="20dp"
                android:text="@string/formAdventurer_txtAlignment"
                android:textColor="@color/colorBlack" />

            <Spinner
                android:id="@+id/formAdventurer_spinAlignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/formAdventurer_txtAlignment"
                android:layout_toEndOf="@+id/formAdventurer_txtAlignment" />

            <TextView
                android:id="@+id/formAdventurer_txtClass"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formAdventurer_txtAlignment"
                android:layout_marginBottom="20dp"
                android:text="@string/formAdventurer_txtClass"
                android:textColor="@color/colorBlack" />

            <Spinner
                android:id="@+id/formAdventurer_spinClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/formAdventurer_txtClass"
                android:layout_toEndOf="@+id/formAdventurer_txtClass" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formAdventurer_txtClass"
                android:gravity="center">

                <TextView
                    android:id="@+id/formAdventurer_txtStr"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/formAdventurer_txtStr"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/formAdventurer_edtStr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/formAdventurer_txtStr"
                    android:layout_alignStart="@+id/formAdventurer_txtStr"
                    android:layout_below="@+id/formAdventurer_txtStr"
                    android:gravity="center"
                    android:inputType="number"
                    android:labelFor="@+id/formAdventurer_edtStr"
                    android:text="@string/formAdventurer_edtStr" />

                <TextView
                    android:id="@+id/formAdventurer_txtDex"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_toEndOf="@+id/formAdventurer_txtStr"
                    android:gravity="center"
                    android:text="@string/formAdventurer_txtDex"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/formAdventurer_edtDex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/formAdventurer_txtDex"
                    android:layout_alignStart="@+id/formAdventurer_txtDex"
                    android:layout_below="@+id/formAdventurer_txtDex"
                    android:gravity="center"
                    android:inputType="number"
                    android:labelFor="@+id/formAdventurer_edtDex"
                    android:text="@string/formAdventurer_edtDex" />

                <TextView
                    android:id="@+id/formAdventurer_txtInt"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/formAdventurer_txtDex"
                    android:gravity="center"
                    android:text="@string/formAdventurer_txtInt"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/formAdventurer_edtInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/formAdventurer_txtInt"
                    android:layout_alignStart="@+id/formAdventurer_txtInt"
                    android:layout_below="@+id/formAdventurer_txtInt"
                    android:gravity="center"
                    android:inputType="number"
                    android:labelFor="@+id/formAdventurer_edtInt"
                    android:text="@string/formAdventurer_edtInt" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/formAdventurer_btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:src="@drawable/ic_human_white_36dp"
        app:fabSize="normal" />
</RelativeLayout>