<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:paddingEnd="60dp"
    android:paddingStart="60dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/dialog_name_txt"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dialog_name_txt"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_race_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dialog_name"
            android:text="@string/dialog_race_txt"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dialog_race_txt"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_alignment_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dialog_race"
            android:text="@string/dialog_alignment_txt"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_alignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dialog_alignment_txt"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_class_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dialog_alignment"
            android:text="@string/dialog_class_txt"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dialog_class_txt"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_weapon_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dialog_class"
            android:text="@string/dialog_weapon_txt"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_weapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dialog_weapon_txt"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_role_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dialog_weapon"
            android:text="@string/dialog_role_txt"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dialog_role_txt"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_role"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <TextView
                android:id="@+id/dialog_str_txt"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:drawableTop="@drawable/sword_cross"
                android:gravity="center"
                android:text="@string/dialog_str_txt"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/dialog_str_txt"
                android:layout_alignLeft="@+id/dialog_str_txt"
                android:layout_alignRight="@+id/dialog_str_txt"
                android:layout_alignStart="@+id/dialog_str_txt"
                android:layout_below="@+id/dialog_str_txt"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_dex_txt"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_toEndOf="@+id/dialog_str_txt"
                android:layout_toRightOf="@+id/dialog_str_txt"
                android:drawableTop="@drawable/sword"
                android:gravity="center"
                android:text="@string/dialog_dex_txt"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_dex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/dialog_dex_txt"
                android:layout_alignLeft="@+id/dialog_dex_txt"
                android:layout_alignRight="@+id/dialog_dex_txt"
                android:layout_alignStart="@+id/dialog_dex_txt"
                android:layout_below="@+id/dialog_dex_txt"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_int_txt"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/dialog_dex_txt"
                android:layout_toRightOf="@+id/dialog_dex_txt"
                android:drawableTop="@drawable/auto_fix"
                android:gravity="center"
                android:text="@string/dialog_int_txt"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/dialog_int_txt"
                android:layout_alignLeft="@+id/dialog_int_txt"
                android:layout_alignRight="@+id/dialog_int_txt"
                android:layout_alignStart="@+id/dialog_int_txt"
                android:layout_below="@+id/dialog_int_txt"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>